--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
    
 </head>
 <body>
+    <img src="images/Grudden-Axesword.png" alt="Grudden-Axesword" style="display: none;" id="gruddenAxesword">
+    <img src="images/startButtonImg.png" alt="StartButton" style="display: none;" id="startButtonImg">
+
     <div>
         <h2>Platformer <span>Use the w,a,space keys to move the avatar</span></h2>
         <canvas width="800" height="500"></canvas>
