--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <img src="images/Grudden-Axesword.png" alt="Grudden-Axesword" style="display: none;" id="gruddenAxesword">
     <img src="images/startButtonImg.png" alt="StartButton" style="display: none;" id="startButtonImg">
+    <img src="images/tower.png" alt="towerImage" style="display: none;" id="towerImg">
 
     <div>
         <h2>Platformer <span>Use the w,a,space keys to move the avatar</span></h2>
