--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <img src="images/Grudden-Axesword.png" alt="Grudden-Axesword" style="display: none;" id="gruddenAxesword">
     <img src="images/startButtonImg.png" alt="StartButton" style="display: none;" id="startButtonImg">
     <img src="images/tower.png" alt="towerImage" style="display: none;" id="towerImg">
+    <img src="images/bat.png" alt="batImage" style="display: none;" id="batImg">
+
 
     <div>
         <h2>Platformer <span>Use the w,a,space keys to move the avatar</span></h2>
