--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <img src="images/startButtonImg.png" alt="StartButton" style="display: none;" id="startButtonImg">
     <img src="images/tower.png" alt="towerImage" style="display: none;" id="towerImg">
     <img src="images/bat.png" alt="batImage" style="display: none;" id="batImg">
+    <img src="images/axe.png" alt="axeImage" style="display: none;" id="axeImg">
+    <img src="images/wallImage.png" alt="wallImage" style="display: none;" id="wallImg">
+    <img src="images/background.jpg" alt="backgroundImage" style="display: none;" id="backgroundImg">
 
 
     <div>
